--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,58 @@
+ @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Poppins:wght@400;500;600;700&display=swap'); 
+
+
+ :root{
+  --black: #343434;
+  --bg: #F8E367;
+  --shadow1: 0px 13px 48px -1px rgba(0, 0, 0, 0.25);
+  --shadow2:  0px 13px 46px rgba(0, 0, 0, 0.13);
+  --pink: #FE956F;
+}
+
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',    sans-serif;
+    background: var(--bg);
+    transition: all 3ms ease ;
+    color: var(--black);
+    scroll-behavior: smooth;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition: all 3ms ease ;
+    -moz-transition: all 3ms ease ;
+    -ms-transition: all 3ms ease ;
+    -o-transition: all 3ms ease ;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'poppins', sans-serif;
 }
+
+
+
+.App{
+  display: flex;
+  flex-direction: column;
+}
+::-webkit-scrollbar{
+  height: 12px;
+  width: 12px;
+  }
+  
+  ::-webkit-scrollbar-track{
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 1ex;
+  }
+  
+  ::-webkit-scrollbar-thumb{
+  background: skyblue;
+  border-radius: 1ex;
+  }
+
+  a{
+    text-decoration: none;
+    color: inherit
+  }
