--- a/src/components/products/Products.module.css
+++ b/src/components/products/Products.module.css
@@ -31,12 +31,12 @@
     font-size: 1.3rem;
 }
 
-.menu>li:hover{
+.menu>li:hover {
     color: var(--pink);
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.list{
+.list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     height: 25rem;
@@ -45,7 +45,7 @@
     justify-content: space-between;
 }
 
-.product{
+.product {
     width: 12rem;
     height: 8rem;
     background-color: white;
@@ -61,8 +61,42 @@
     -o-border-radius: 1rem;
 }
 
-.product>img{
+.product>img {
     top: 3rem;
     width: 6rem;
     height: 11rem;
+}
+
+
+@media screen and (max-width: 856px) {
+    .container {
+        gap: 1rem;
+    }
+
+    .container> :nth-child(1) {
+        display: none;
+    }
+
+    .products {
+        grid-template-columns: none;
+        gap: 1rem;
+    }
+
+    .menu {
+        flex-direction: row;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .menu {
+        margin-left: -2rem;
+        gap: 0.5rem;
+        width: 100%;
+        font-size: 1.2rem;
+        flex-wrap: wrap;
+    }
+
+    .container h1 {
+        text-align: center;
+    }
 }
