--- a/src/components/testimonials/Testimonials.module.css
+++ b/src/components/testimonials/Testimonials.module.css
@@ -4,14 +4,13 @@
     justify-content: center;
     align-items: center;
     padding: 4rem 2rem;
-
 }
 
 .wrapper {
-    display: grid;
-    align-items: flex-end;
     width: 100%;
+    display: grid;
     grid-template-columns: 1fr 2fr 1fr;
+    align-items: flex-end;
 }
 
 .wrapper>img {
@@ -27,21 +26,18 @@
 
 .container>:nth-child(1) {
     font-size: 2rem;
-    text-transform: uppercase;
-    display: block;
     font-weight: bold;
+    text-transform: uppercase;
 }
 
 .container>:nth-child(2) {
-    font-size: 0.8rem;
+    font-size: .8rem;
     text-transform: uppercase;
     display: block;
-
 }
 
 .wrapper>:nth-child(3) {
     text-align: right;
-
 }
 
 .reviews {
@@ -63,38 +59,50 @@
     flex-direction: column;
     position: relative;
     background: white;
-    border-radius: 5rem;
+    border-radius: .5rem;
     align-items: center;
     justify-content: center;
     padding: 1rem;
     gap: 1rem;
     box-shadow: 0rem 1rem 3rem -50px #7d7d7d;
-
-    -webkit-border-radius: 5rem;
-    -moz-border-radius: 5rem;
-    -ms-border-radius: 5rem;
-    -o-border-radius: 5rem;
 }
 
-.testimonial>image{
-    position: absolute;
-    width: 3rem;
-    top: -1.5rem;
+.testimonial>img {
+    position: absolute !important;
+    width: 3rem !important;
+    top: -1.5rem !important;
     left: 45%;
 }
 
-.testimonial>span:nth-of-type(1){
-    align-items: center;
-    font-size: 0.8rem;
-    margin-top: 2rem;
+.testimonial>span:nth-of-type(1) {
+    text-align: center;
+    font-size: .8rem;
     letter-spacing: 1px;
-}
-.testimonial>span:nth-of-type(2){
-    font-size: 500;
+    margin-top: 2rem;
 }
 
-.testimonial>hr{
-    height: 1px;width: 80%;
+.testimonial>hr {
+    height: 1px;
+    width: 80%;
     background: rgb(198, 198, 198);
-    bottom: none;
+    border: none;
+}
+
+.testimonial>span:nth-of-type(2) {
+    font-weight: 500;
+}
+
+@media screen and (max-width: 640px) {
+    .wrapper {
+        grid-template-columns: 1fr;
+    }
+
+    .wrapper>img {
+        width: 80vw;
+    }
+
+    .wrapper>:nth-child(3),
+    .wrapper>:nth-child(1) {
+        text-align: center;
+    }
 }
