--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
  :root{
   --black: #343434;
   --bg: #F8E367;
+  --orange : #FCA61F;
   --shadow1: 0px 13px 48px -1px rgba(0, 0, 0, 0.25);
   --shadow2:  0px 13px 46px rgba(0, 0, 0, 0.13);
   --pink: #FE956F;
