--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -39,7 +39,7 @@
 .cart2>svg {
     width: 30px;
     height: 30px;
-    background: white;
+    background: inherit;
     padding: 10px;
     border-radius: 50%;
     border: 6px solid var(--black);
@@ -49,7 +49,8 @@
     display: flex;
     gap: 1rem;
     align-items: center;
-    background: white;
+    background: inherit;
+    color: inherit;
     padding: 10px;
     font-size: 0.8rem;
     border-radius: 15px;
@@ -89,7 +90,7 @@
     display: flex;
     flex-direction: column;
     width: min-content;
-    color: black;
+    color:inherit;
 }
 
 .text2> :first-child {
