--- a/src/components/toggle/Toggle.module.css
+++ b/src/components/toggle/Toggle.module.css
@@ -1,6 +1,6 @@
-.toggle{
+.toggle {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     border: 3px solid var(--orange);
     border-radius: 1rem;
     position: relative;
@@ -8,12 +8,14 @@
     cursor: pointer;
 
 }
-.toggle>*{
+
+.toggle>* {
     width: 1rem;
     height: 1rem;
     color: var(--orange);
 }
-.button{
+
+.button {
     border-radius: 100%;
     background: var(--orange);
     position: absolute;
@@ -21,4 +23,10 @@
     -moz-border-radius: 100%;
     -ms-border-radius: 100%;
     -o-border-radius: 100%;
+}
+
+.show {
+    /* height: -1rem; */
+    margin-top: -2.2vh;
+    margin-left: -2px;
 }
