--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -9,9 +9,13 @@
 }
 
 .s-container .swiper-slide {
-    background: white;
+
+    /* position: relative; */
+background: white; 
+border-radius: 10px;
+    /* 
     display: flex;
-    border-radius: 10px;
+   
     padding: 1rem;
     box-sizing: border-box;
     overflow: hidden;
@@ -20,7 +24,7 @@
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    -o-border-radius: 10px; */
 }
 
 .s-container .swiper-button-prev {
@@ -37,35 +41,50 @@
 }
 
 .left-s {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between; */
+    display: grid;
+    grid-template-rows: auto 70% auto;
+  }
+
+
+.addIcon {
+    margin-left: 20px;
+    align-items: center;
+    justify-content:space-around ;
+}
+
+.plus {
+    background: red ;
+    width: 100px;
+    gap: 20px;
 }
 
 .name {
     display: flex;
     flex-direction: column;
-    color : black;
+    color: black;
 }
 
 .name>:nth-child(1) {
     font-size: 1.4rem;
     font-weight: 600;
-    color : black;
+    color: black;
 }
 
 .name>:nth-child(2) {
     font-size: 0.7rem;
-    color : black;
+    color: black;
 }
 
 .left-s>:nth-child(2) {
     font-weight: bold;
     font-size: 2rem;
-    color : black;
+    color: black;
 }
 
-.left-s>:nth-child(3) {
+.left-s>:nth-child(4) {
     font-size: 0.6rem;
     border: 1px solid var(--black);
     border-radius: 15px;
@@ -90,9 +109,11 @@
     -o-transform: rotate(-20deg);
 }
 
+
+
 @media screen and (max-width: 856px) {
     .s-container .swiper {
-        width: 90%;
+        width: 100%;
         height: 9rem;
     }
 
