--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,7 +9,7 @@
     --text-color: #000;
     --border-color: #FCA61F;
     color: var(--text-color);
-    /* background-color: var(--bg-color); */
+    background-color: var(--bg-color);
   }
   
   .App.dark {
