--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -53,7 +53,10 @@ color: #fe956f
 }
 
 .shopping{
-    margin-top: 5px;
+    margin-top: 1.5%;
+    size: 50px;
+    width: 30px;
+    height: 20px;
 }
 
 .cart{
