--- a/src/components/ShoppingList.module.css
+++ b/src/components/ShoppingList.module.css
@@ -3,7 +3,7 @@
     grid-template-columns: 30px 70px 20px 30px 30px 30px ;
 }
 
-.shoopingImg{
+.shoppingImg{
     height: 40px;
     width: 20px;
 }
