--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -106,7 +106,7 @@ padding-inline: 8%
 
 
 
-@media screen and (max-width: 856px) {
+@media screen and (max-width: 920px) {
     .s-container .swiper {
         width: 100%;
         height: 9rem;
@@ -115,5 +115,21 @@ padding-inline: 8%
     .s-container .swiper-button-prev,
     .s-container .swiper-button-next {
         display: none;
+    }
+
+    .left-s {
+        display: grid;
+        grid-template-rows: auto 30% auto;
+        padding-left: 5%;
+    }
+    
+    
+    
+    .plus {
+        justify-content: space-around;
+        width: 100px;
+    }
+    .plus:nth-child(2) {
+    padding-inline: 8%
     }
 }
