--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -24,7 +24,7 @@
     gap: 2rem;
     align-items: center;
     justify-content: center;
-    background: rgb(118, 110, 110) !important;
+    /* background: rgb(118, 110, 110) !important; */
 
 }
 
