--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -24,6 +24,8 @@
     gap: 2rem;
     align-items: center;
     justify-content: center;
+    background: var(--bg-main-color);
+    border: 1px solid #fff;
     /* background: rgb(118, 110, 110) !important; */
 
 }
@@ -83,7 +85,6 @@ color: #fe956f
         position: absolute;
         right: 2rem;
         z-index: 9999;
-        background: white;
         color: var(--black);
         border-radius: 5px;
         flex-direction: column;
