--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -47,13 +47,12 @@
 
 
 
-.plus {
+.Add_remove {
     justify-content: space-around;
     width: 100px;
+    padding: 0 5% 0 5%;
 }
-.plus:nth-child(2) {
-padding-inline: 8%
-}
+
 
 
 .name {
@@ -126,10 +125,8 @@ padding-inline: 8%
     
     
     .plus {
-        justify-content: space-around;
-        width: 100px;
+        display: flex;
+        justify-content: space-between;
     }
-    .plus:nth-child(2) {
-    padding-inline: 8%
-    }
+
 }
